Saved results of exp 50K poor

--- a/notebooks/out_of_domain_uncertainty_poor_income_test/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_test/Income_2018_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fff6cbc9",
+   "id": "0c3913f1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.508840Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "302b8049",
+   "id": "7b16dd84",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509078Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d98aa3b1",
+   "id": "bad1c7ae",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509136Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9724956e",
+   "id": "ac595614",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509254Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7dd1ea6e",
+   "id": "164f0a65",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.598557Z",
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6641ff27",
+   "execution_count": 1,
+   "id": "717ad782",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.766776Z",
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d08c5b70",
+   "execution_count": 2,
+   "id": "624c86a5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.777334Z",
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "97c72c95",
+   "execution_count": 3,
+   "id": "0daf2b7d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.785281Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b945640",
+   "id": "5300304c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -151,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c78a3992",
+   "execution_count": 4,
+   "id": "a0956c8d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:59.998217Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97220634",
+   "id": "d24e4118",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d9460cf8",
+   "execution_count": 5,
+   "id": "ccc54971",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.026897Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7402e78b",
+   "id": "2a7c4d22",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "29b77ecb",
+   "execution_count": 6,
+   "id": "0beee77b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.049775Z",
@@ -242,7 +242,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f8217c89",
+   "execution_count": 7,
+   "id": "5e45e2b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.391474Z",
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4e7df658",
+   "execution_count": 10,
+   "id": "d3fbd949",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.418361Z",
@@ -287,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b74b8eef-38ac-4bb5-a970-96e8798f3122\n"
+      "Current session uuid:  5da5b71c-ff1b-4d0e-9f73-cd18d2ee1ea8\n"
      ]
     }
    ],
@@ -295,15 +295,15 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    'session_uuid': str(uuid.uuid4()),\n",
-    "    # 'session_uuid': '',\n",
+    "#     'session_uuid': str(uuid.uuid4()),\n",
+    "    'session_uuid': '5da5b71c-ff1b-4d0e-9f73-cd18d2ee1ea8',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db66376d",
+   "id": "4e7b640b",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -311,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4ea30d87",
+   "execution_count": 11,
+   "id": "93ca354a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:03.430736Z",
@@ -432,7 +432,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0ba41cfa",
+   "execution_count": 12,
+   "id": "0666b117",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:03.446908Z",
@@ -460,7 +460,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4d0aa1da",
+   "execution_count": 13,
+   "id": "09535807",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.347609Z",
@@ -592,7 +592,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "52cf1f32",
+   "execution_count": 14,
+   "id": "722b9b44",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.372599Z",
@@ -620,7 +620,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "99f90a0f",
+   "execution_count": 15,
+   "id": "1328ede8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.426865Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29a37d47",
+   "id": "0b8eaa15",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "776ebcb8",
+   "id": "4ce78474",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -662,8 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c9712eec",
+   "execution_count": 16,
+   "id": "892ead9c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.429683Z",
@@ -679,8 +679,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7be20635",
+   "execution_count": 17,
+   "id": "1ca7283e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.470539Z",
@@ -701,8 +701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "84554cc2",
+   "execution_count": null,
+   "id": "29c5471c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:17:06.789657Z",
@@ -714,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 11:33:24 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-28 06:35:09 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -726,14 +726,16 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b74b8eef-38ac-4bb5-a970-96e8798f3122'}\n"
+      " 'session_uuid': '5da5b71c-ff1b-4d0e-9f73-cd18d2ee1ea8'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 11:33:24 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-10-28 06:35:09 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -744,24 +746,30 @@
       "In-domain full_df.shape --  (100000, 9)\n",
       "In-domain init_features_df.shape --  (100000, 10)\n",
       "In-domain number of rows in X_train_val --  90000\n",
-      "In-domain number of rows in X_test --  10000\n",
-      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
-      "Out-of-domain 1 number of rows in X_train_val --  0\n",
-      "Out-of-domain 1 number of rows in X_test --  10000\n"
+      "In-domain number of rows in X_test --  10000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 11:33:26 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-10-28 06:35:11 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
+      "Out-of-domain 1 number of rows in X_train_val --  0\n",
+      "Out-of-domain 1 number of rows in X_test --  10000\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03012d53200540f99e340533d3647391",
+       "model_id": "44a41b4e1fbb49f197beaf03e9d41fb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -776,7 +784,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 11:33:26 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-10-28 06:35:11 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -791,7 +799,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 11:43:07 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-10-28 06:44:50 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -1242,22 +1250,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/21, 11:43:07: Tuning RandomForestClassifier...\n",
-      "2023/10/21, 15:43:15: Tuning for RandomForestClassifier is finished [F1 score = 0.7552305647584788, Accuracy = 0.8060666666666666]\n"
+      "2023/10/28, 06:44:50: Tuning RandomForestClassifier...\n",
+      "2023/10/28, 09:11:53: Tuning for RandomForestClassifier is finished [F1 score = 0.7536117158274415, Accuracy = 0.8041999999999999]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 15:43:15 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-10-28 09:11:53 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "987a4dc29e2d40098f954d3967f9b4a9",
+       "model_id": "e3e97722c9664390a1e0b99314651554",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1271,7 +1280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "838dcfef98b7478d9493cb8f2c727dd5",
+       "model_id": "b8093985785a4998a3e75349e9232cb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1302,7 +1311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b787c2",
+   "id": "4325880e",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1310,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee043b06",
+   "id": "8ffcd9aa",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1318,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db299e5c",
+   "id": "f6fc31be",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1326,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918824a2",
+   "id": "bb095b96",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1334,7 +1343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15a89b4a",
+   "id": "e3058fd3",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1343,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31d22ae5",
+   "id": "4899a19f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:17:06.794266Z",
