--- a/notebooks/out_of_domain_uncertainty_rich_income_test/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_test/Income_2018_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a64c5aba",
+   "id": "77cafb90",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066343Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "06363db4",
+   "id": "61b39f1f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066551Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd911ba5",
+   "id": "d5d163bd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066624Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d2836830",
+   "id": "33f16ba5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.085024Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4e9a761f",
+   "id": "cea4da36",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.086646Z",
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6bef646d",
+   "execution_count": 1,
+   "id": "24e0fd3b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.615817Z",
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5a317ecc",
+   "execution_count": 2,
+   "id": "c0132e26",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.624868Z",
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "97829b76",
+   "execution_count": 3,
+   "id": "2dc2e799",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.635057Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ef8004",
+   "id": "d80b7e5f",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -151,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "efda87cc",
+   "execution_count": 4,
+   "id": "aa821978",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.584740Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3d3d515",
+   "id": "76b2c712",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ba283e11",
+   "execution_count": 5,
+   "id": "e29a749d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.612792Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "193119ee",
+   "id": "67c4f31a",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "269f674a",
+   "execution_count": 6,
+   "id": "8d60251f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.635294Z",
@@ -242,7 +242,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7c6ec18b",
+   "execution_count": 7,
+   "id": "682cbb1b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.991818Z",
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1341cdcd",
+   "execution_count": 9,
+   "id": "b70a5894",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:19.021346Z",
@@ -287,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  9af761cf-de63-4868-b8c1-75c7ee25103b\n"
+      "Current session uuid:  b502586e-0513-405e-acf5-420e363abfe6\n"
      ]
     }
    ],
@@ -295,15 +295,15 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    'session_uuid': str(uuid.uuid4()),\n",
-    "    # 'session_uuid': '',\n",
+    "#     'session_uuid': str(uuid.uuid4()),\n",
+    "    'session_uuid': 'b502586e-0513-405e-acf5-420e363abfe6',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac879968",
+   "id": "56a7d67f",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -311,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "93ed8639",
+   "execution_count": 10,
+   "id": "cbe25d16",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:22.342383Z",
@@ -432,7 +432,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "b61ae199",
+   "execution_count": 11,
+   "id": "eda5d7cf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:22.380074Z",
@@ -460,7 +460,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b8e275ec",
+   "execution_count": 12,
+   "id": "d3a655ba",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.460383Z",
@@ -592,7 +592,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "1d2fb4b8",
+   "execution_count": 13,
+   "id": "ead5a05d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.512345Z",
@@ -620,7 +620,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "8dd94fa0",
+   "execution_count": 14,
+   "id": "f50556fb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.528561Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe8f83c",
+   "id": "b31ffdb7",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0da36c6a",
+   "id": "60c3ed6c",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -662,8 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "9575ee5e",
+   "execution_count": 15,
+   "id": "31ef208c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.548691Z",
@@ -679,8 +679,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "147e59f4",
+   "execution_count": 16,
+   "id": "6998a320",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.594507Z",
@@ -701,8 +701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "61e0bfca",
+   "execution_count": null,
+   "id": "c177dffe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:41:40.061277Z",
@@ -714,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:10:05 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-28 06:32:15 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -726,14 +726,16 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '9af761cf-de63-4868-b8c1-75c7ee25103b'}\n"
+      " 'session_uuid': 'b502586e-0513-405e-acf5-420e363abfe6'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:10:05 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-10-28 06:32:15 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -743,25 +745,31 @@
      "text": [
       "In-domain full_df.shape --  (100000, 9)\n",
       "In-domain init_features_df.shape --  (100000, 10)\n",
-      "In-domain X_train_val.shape --  (90000, 805)\n",
-      "In-domain X_test.shape --  (10000, 805)\n",
-      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
-      "Out-of-domain 1 X_train_val.shape --  (0, 0)\n",
-      "Out-of-domain 1 X_test.shape --  (10000, 805)\n"
+      "In-domain number of rows in X_train_val --  90000\n",
+      "In-domain number of rows in X_test --  10000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:10:06 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-10-28 06:32:17 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
+      "Out-of-domain 1 number of rows in X_train_val --  0\n",
+      "Out-of-domain 1 number of rows in X_test --  10000\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2790972eb910442dafd95bf92a3abeb0",
+       "model_id": "a10534fa59704d1bb882ccd1ade68ef5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -776,7 +784,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:10:07 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-10-28 06:32:17 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -791,7 +799,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:19:00 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-10-28 06:42:06 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -799,7 +807,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of in-domain X_test (10000, 804)\n",
+      "Number of rows in the in-domain X_test 10000\n",
       "Top indexes of an X_test in an in-domain base flow dataset:  Int64Index([22422, 25747, 13795, 68724, 38923, 43064, 86918, 71138, 82508,\n",
       "            89200, 55279,  7966, 83751, 37701,  2718, 65519, 77797,  8956,\n",
       "            33713, 34621],\n",
@@ -1022,7 +1030,7 @@
       "\n",
       "\n",
       "\n",
-      "Shape of out-of-domain X_test (10000, 804)\n",
+      "Number of rows in the out-of-domain X_test 10000\n",
       "Top indexes of an X_test in an out-of-domain base flow dataset:  Int64Index([22422, 25747, 13795, 68724, 38923, 43064, 86918, 71138, 82508,\n",
       "            89200, 55279,  7966, 83751, 37701,  2718, 65519, 77797,  8956,\n",
       "            33713, 34621],\n",
@@ -1242,22 +1250,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/21, 09:19:00: Tuning RandomForestClassifier...\n",
-      "2023/10/21, 12:08:47: Tuning for RandomForestClassifier is finished [F1 score = 0.8130805742156334, Accuracy = 0.8132]\n"
+      "2023/10/28, 06:42:06: Tuning RandomForestClassifier...\n",
+      "2023/10/28, 09:45:44: Tuning for RandomForestClassifier is finished [F1 score = 0.8124367758310086, Accuracy = 0.8125666666666667]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 12:08:47 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-10-28 09:45:44 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78b34c66756e412d81f99988ef870953",
+       "model_id": "c9bc37f4ae074b698490314eb1fc8b31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1271,7 +1280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11529430c88a4bd9b46a73b4b6d53047",
+       "model_id": "922d5da4d2534209b33a3d38b02a32f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1302,7 +1311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad45ac4",
+   "id": "627265e4",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1310,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a5b7d71",
+   "id": "114b8591",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1318,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffa83aa8",
+   "id": "a101580c",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1326,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de2865c7",
+   "id": "8a2e1577",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1334,7 +1343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "923ee873",
+   "id": "5858f694",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1343,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfebc91e",
+   "id": "19fb5052",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:41:40.079140Z",
